# kontxt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: README.md  ci.yml  publish.yml
benchmarks/: window_selection.py
docs/: index.md
docs/api/: index.md
docs/guides/: getting-started.md
examples/: async_chat_demo.py  basic_prompt_registry.py  chat_session_demo.py  context_management.py  gemini_format_demo.py  gemini_phase_workflow.py  get_messages_demo.py  memory_examples.py  multi_phase_workflow.py  new_api_demo.py  simple_rag.py
src/kontxt/: __init__.py  cli.py  context.py  exceptions.py  phases.py  providers.py  session.py  state.py  tokens.py  types.py
src/kontxt/core/: __init__.py  async_base.py  exceptions.py
src/kontxt/memory/: __init__.py  backends.py  cache.py  memory.py  scratchpad.py
src/kontxt/prompts/: __init__.py  prompt.py  types.py
src/kontxt/prompts/loaders/: __init__.py  discovery.py  file_loader.py
src/kontxt/prompts/renderers/: __init__.py  base.py  freeform.py  hybrid.py  structured.py
src/kontxt/prompts/utils/: __init__.py  logging.py  versioning.py
src/kontxt/prompts/variables/: __init__.py  filters.py  validator.py
src/kontxt/providers/: __init__.py  base.py  gemini.py
src/kontxt/utils/: __init__.py  budget.py  renderers.py  serialization.py
tests/: conftest.py  test_context.py  test_context_store.py  test_gemini_provider_integration.py  test_gemini_rendering_validation.py  test_get_messages.py  test_memory.py  test_memory_manager.py  test_new_api.py  test_phase_workflow_deep.py  test_phases.py  test_prompt_registry.py
tests/prompts/: __init__.py  fixtures.py  test_loaders.py  test_performance.py  test_prompt.py  test_renderers.py  test_types.py  test_utils.py  test_variables.py
