[project]
name = "kontxt"
version = "0.1.0"
description = "Framework-agnostic context management for AI applications (early alpha)."
readme = "README.md"
authors = [
    { name = "Elvin Gomez", email = "3lv27.dev@gmail.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
kontxt = "kontxt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
