[project]
name = "kontxt"
version = "0.1.0a3"
description = "Context orchestration primitives for LLM applications."
readme = "README.md"
authors = [
    { name = "Elvin Gomez", email = "3lv27.dev@gmail.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["llm", "context", "memory", "prompt-engineering", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "pydantic>=2.6,<3.0",
    "tiktoken>=0.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.10",
    "twine>=5.0"
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5"
]

[project.urls]
Homepage = "https://github.com/raise-lab/kontxt"
Documentation = "https://github.com/raise-lab/kontxt"
Repository = "https://github.com/raise-lab/kontxt"
Issues = "https://github.com/raise-lab/kontxt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kontxt"]

[tool.hatch.build.targets.sdist]
include = [
    "src/kontxt",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "pyproject.toml"
]

[tool.uv]
package = true
